@@ -1,4 +1,0 @@
-
-[alert]
-
-alert-dir="@localstatedir@/spool/uhuru"
