@@ -1,13 +1,0 @@
-
-[quarantine]
-
-# is quarantine enabled?
-enable=0
-
-# quarantine directory
-# files containing malware will be moved to this directory, renamed and made 
-# non-readable
-# quarantine directory must be mode 333 octal. This is normaly managed by 
-# package installation scripts
-quarantine-dir="@localstatedir@/lib/uhuru/quarantine"
-
