@@ -1,5 +1,0 @@
-[remote]
-
-socket-dir="/tmp"
-
-
