@@ -1,9 +1,0 @@
-#ifndef _LIBUHURU_MIMETYPES_H_
-#define _LIBUHURU_MIMETYPES_H_
-
-#include <libuhuru/module.h>
-#include <libuhuru/scan.h>
-
-extern struct uhuru_module mimetype_module;
-
-#endif
