@@ -1,5 +1,5 @@
 #include <libuhuru/module.h>
-#include "mimetype.h"
+#include "uhurumod.h"
 #include "uhurup.h"
 
 #include <assert.h>
@@ -7,23 +7,9 @@
 #include <stdlib.h>
 #include <string.h>
 
-struct mimetype_data {
-};
-
-static enum uhuru_mod_status mimetype_init(void **pmod_data)
+static enum uhuru_mod_status uhurumod_conf_set_mime_type(void *mod_data, const char *key, const char **argv)
 {
-  struct mimetype_data *re_data = g_new(struct mimetype_data, 1);
-
-  /* ... */
-
-  *pmod_data = re_data;
-
-  return UHURU_MOD_OK;
-}
-
-static enum uhuru_mod_status mimetype_conf_set_mime_type(void *mod_data, const char *key, const char **argv)
-{
-  struct mimetype_data *re_data = (struct mimetype_data *)mod_data;
+  struct uhuru *u = (struct uhuru *)mod_data;
   const char *mime_type;
 
   if (argv[0] == NULL || argv[1] == NULL) {
@@ -34,27 +20,41 @@ static enum uhuru_mod_status mimetype_conf_set_mime_type(void *mod_data, const c
   mime_type = argv[0];
 
   for(argv++; *argv != NULL; argv++) {
-    /* FIXME */
-    struct uhuru_module *mod = uhuru_get_module_by_name(NULL, *argv);
+    struct uhuru_module *mod = uhuru_get_module_by_name(u, *argv);
     
     if (mod == NULL) {
       g_log(NULL, G_LOG_LEVEL_WARNING, "mime-type: no module '%s' for MIME type '%s'", *argv, mime_type);
       return UHURU_MOD_CONF_ERROR;
     }
 
-    /* FIXME */
-    uhuru_add_mime_type(NULL, mime_type, mod);
+    uhuru_add_mime_type(u, mime_type, mod);
   }
 
   return UHURU_MOD_OK;
 }
 
-struct uhuru_conf_entry mimetype_conf_table[] = {
+#if 0
+static enum uhuru_mod_status uhurumod_conf_set_conf_dir(void *mod_data, const char *key, const char **argv)
+{
+  struct uhuru *u = (struct uhuru *)mod_data;
+
+  return UHURU_MOD_OK;
+}
+#endif
+
+struct uhuru_conf_entry uhurumod_conf_table[] = {
   { 
     .key = "mime-type", 
-    .conf_set_fun = mimetype_conf_set_mime_type, 
+    .conf_set_fun = uhurumod_conf_set_mime_type, 
     .conf_get_fun = NULL,
   },
+#if 0
+  { 
+    .key = "conf-dir", 
+    .conf_set_fun = uhurumod_conf_set_conf_dir, 
+    .conf_get_fun = NULL,
+  },
+#endif
   { 
     .key = NULL, 
     .conf_set_fun = NULL, 
@@ -62,11 +62,11 @@ struct uhuru_conf_entry mimetype_conf_table[] = {
   },
 };
 
-struct uhuru_module mimetype_module = {
-  .init_fun = mimetype_init,
-  .conf_table = mimetype_conf_table,
+struct uhuru_module uhurumod_module = {
+  .init_fun = NULL,
+  .conf_table = uhurumod_conf_table,
   .post_init_fun = NULL,
   .scan_fun = NULL,
   .close_fun = NULL,
-  .name = "mime-type",
+  .name = "uhuru",
 };
