@@ -1,0 +1,8 @@
+#ifndef _LIBUHURU_UHURUMOD_H_
+#define _LIBUHURU_UHURUMOD_H_
+
+#include <libuhuru/module.h>
+
+extern struct uhuru_module uhurumod_module;
+
+#endif
