@@ -4,10 +4,12 @@
 #include <libuhuru/module.h>
 #include <libuhuru/scan.h>
 
-void conf_load_dir(struct uhuru *uhuru, const char *path);
-
 int conf_set_value(struct uhuru *uhuru, const char *mod_name, const char *key, const char **argv);
 
 const char **conf_get_value(struct uhuru *uhuru, const char *mod_name, const char *key);
+
+void conf_load_file(struct uhuru *uhuru, const char *filename);
+
+void conf_load_path(struct uhuru *uhuru, const char *path);
 
 #endif
